# spectrum.py

./: .gitignore  .mcp.json  LICENSE  README.md  mcp_server.py  pyproject.toml  requirements.txt
examples/: .template.env  community_hub.py  discord_bridge.py  gateway_example.py  http_example.py  main.py  recruiting_poster.py
src/: main.py
src/spectrum/: __init__.py  client.py  content_builder.py  errors.py  gateway.py  grpc_gateway.py  http.py  httpclient.py
src/spectrum/cig/: __init__.py  client.py  schema.json
src/spectrum/community/: __init__.py  client.py  models.py
src/spectrum/community/graphql/fragments/: Account.graphql  AccountCard.graphql  AccountStats.graphql  AccountTooltip.graphql  Audio.graphql  AudioCard.graphql  AudioCardCarousel.graphql  Comment.graphql  (+21 more)
src/spectrum/galactapedia/: __init__.py  client.py  schema.json
src/spectrum/issue_council/: __init__.py  client.py
src/spectrum/models/: __init__.py  activity.py  badge.py  channel.py  community.py  content.py  emoji.py  forum.py  lobby.py  member.py  message.py  object.py  pagination.py  permissions.py  presence.py  reaction.py  reply.py  role.py  thread.py  upload.py
src/spectrum/models/abc/: __init__.py  hasclient.py  identifier.py  subscription.py
src/spectrum/orgs/: __init__.py  client.py
src/spectrum/roadmap/: __init__.py  client.py
src/spectrum/rsi/: __init__.py  client.py
src/spectrum/starmap/: __init__.py  client.py
src/spectrum/store/: __init__.py  client.py
src/spectrum/util/: __init__.py  datetime.py  entity_ranges.py  event_dispatch.py  limited_size_dict.py
(+132 files in other folders)
